# docmirror

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh-CN.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
changelog/: index.html
contributing/: index.html
design/page-concurrency-implementation/: index.html
design/performance-optimization/: index.html
design/solution-design/: index.html
development/testing/: index.html
docmirror/: __init__.py  __main__.py  _compat.py
docmirror/adapters/: __init__.py  email.py  excel.py  image.py  pdf.py  ppt.py  structured.py  web.py  word.py
docmirror/adapters/data/: structured.py
docmirror/configs/: __init__.py  column_aliases.yaml  domain_registry.py  hints.yaml  institution_registry.yaml  key_synonyms.yaml  pipeline_registry.py  settings.py
docmirror/core/: __init__.py  exceptions.py  factory.py
docmirror/framework/: __init__.py  base.py  cache.py  dispatcher.py  orchestrator.py
docmirror/middlewares/: __init__.py  base.py
docmirror/models/: __init__.py  errors.py
docmirror/plugins/: __init__.py  bank_statement.py
docmirror/server/: api.py  schemas.py
docs/: changelog.md  contributing.md  index.md  integrations.md  plg-strategies.md
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: architecture.md  configuration.md  formats.md
docs/plugins/: creating-plugins.md  overview.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/architecture/: index.html
guide/configuration/: index.html
guide/error-handling/: index.html
guide/external-ocr/: index.html
guide/formats/: index.html
integrations/: index.html
plg-strategies/: index.html
plugins/creating-plugins/: index.html
plugins/overview/: index.html
search/: search_index.json
tests/: conftest.py  profile_parse.py  test_domain_registry.py  test_e2e_parse.py  test_integration.py  test_omml_extractor.py  test_plugins.py  test_quality_router.py  test_server.py  test_settings.py
tests/benchmark/: __init__.py  hybrid_matcher.py  metrics.py
tests/fixtures/: 中信银行_202601231649048556664.json
(+88 files in other folders)
